# slmkiii

./: .gitignore  AUM_SUITE.md  CLAUDE.md  aum_suite.py  aum_tools.py  main.py  pyproject.toml
aum_samples/: Untitled 2026-02-24 22.53.54.aumproj
aum_samples/MIDI Mappings/Channel/: Animoog.aum_midimap  Battalion.aum_midimap
aum_samples/MIDI Mappings/Ruismaker.AU-4272616D7275697361756D75/: New MIDI Mapping.aum_midimap
aum_samples/MIDI Mappings/Transport/: New MIDI Mapping.aum_midimap
controlmap/: __init__.py  bridge.py  cc_alloc.py  model.py  paging.py  strategy.py  surface.py
controlmap/controllers/: __init__.py  registry.py
controlmap/controllers/data/: slmkiii.json
controlmap/deploy/: __init__.py
controlmap/emitters/: __init__.py  aum_emitter.py  slmkiii_emitter.py
controlmap/plugins/: __init__.py  harvest.py  registry.py
controlmap/plugins/data/: animoog_z.json  ua_battalion.json
examples/: baconator.py  convert.py
slmkiii/: __init__.py  cli.py  errors.py  incontrol.py  mcp_server.py  midi.py  utils.py
slmkiii/template/: __init__.py
slmkiii/template/input/: __init__.py  button.py  fader.py  knob.py  pad_hit.py  range_control.py
tests/: __init__.py  test_aum_tools.py  test_controlmap.py  test_controlmap_io.py  test_incontrol.py
tests/data/: bad_checksum.syx  test1.syx  test2.syx
