[project]
name = "slmkiii"
version = "2.0.0"
description = "Python library for Novation SL MkIII MIDI controller templates"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: MIDI",
]

dependencies = [
    "mido>=1.3.3",
    "python-rtmidi>=1.5.8",
]

[project.optional-dependencies]
mcp = ["mcp[cli]>=1.26.0"]
dev = ["bpython>=0.26", "coverage"]

[project.scripts]
slmkiii = "slmkiii.cli:main"

[project.urls]
Repository = "https://github.com/TheFermiSea/slmkiii"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
